<resources>
    <string name="app_name">UserList App#2</string>
    <string name="getFile">Обновить</string>
    <string name="someText">SomeText</string>
    <string name="ID_Text">ID: </string>
    <string name="GUID_Text">GUID: </string>
    <string name="Status_Text">Status: </string>
    <string name="Balance_Text">Balance: </string>
    <string name="Age_Text">Age: </string>
    <string name="EyeColor_Text">Eye Color: </string>
    <string name="Gender_Text">Gender: </string>
    <string name="Company_Text">Company: </string>
    <string name="Email_Text">E-mail: </string>
    <string name="Phone_Text">Phone: </string>
    <string name="Adress_Text">Adress: </string>
    <string name="About_Text">About: </string>
    <string name="Registered_Text">Registered: </string>
    <string name="Location_Text">Location: </string>
    <string name="Tags_Text">Tags: </string>
    <string name="Friends_Text">Friends (hold): </string>
    <string name="FavoriteFruit_Text">Favorite Fruit: </string>
    <string name="todo">TODO</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_exit">Exit</string>
    <string name="activityuser_guid">GUID:</string>
    <string name="activityuser_balance">Balance:</string>
    <string name="activityuser_age">Age:</string>
    <string name="activityuser_eye_color">Eye Color:</string>
    <string name="activityuser_gender">Gender:</string>
    <string name="activityuser_company">Company:</string>
    <string name="activityuser_email">E-mail:</string>
    <string name="activityuser_phone">Phone:</string>
    <string name="activityuser_adress">Adress:</string>
    <string name="activityuser_about">About:</string>
    <string name="activityuser_registered">Registered:</string>
    <string name="activityuser_location">Location:</string>
    <string name="activityuser_tags">Tags:</string>
    <string name="activityuser_friends">Friends:</string>
    <string name="activityuser_favoritfruit">Favorit fruit:</string>
    <string name="activityuser_id">ID:</string>
</resources>
