<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="8dp"
    tools:context=".UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="12dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_id"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12dp"
            />
        <TextView
            android:id="@+id/tvUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="387"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_guid"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserGUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="387kjsbdfidjjs87w345jk899et87f34"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_balance"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$10,000"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_age"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="28"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_eye_color"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            />
        <ImageView
            android:id="@+id/ivUserEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="20dp"
            tools:src="@android:drawable/btn_star"
            android:contentDescription="TODO" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_gender"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            />
        <ImageView
            android:id="@+id/ivUserSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@android:drawable/btn_star"
            android:maxHeight="20dp"
            android:contentDescription="TODO" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_company"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Abracadabra"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_email"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="companymail@yandex.ru"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:onClick="fromMailToSend"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_phone"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="+7(988)3544445"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:onClick="fromOhoneToCall"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_adress"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Russia, Moscow, Karla Libhnehta str 59/11"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_about"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="bfdfjiref ushf sruhfi  sdfiuhsdifuhsdfh  sdiofuhsjhs dfvoshdfjsdfb jsdfjsbdfhsdf jhsdf jh jjhsdfsjdhfjs jhsdjfhsjhfjshdfj"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_registered"
            android:textStyle="bold|italic"
            android:paddingRight="10dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="04.09.2019"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_location"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="-23.450865, -18.7344501"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:onClick="fromLocationToGeo"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_tags"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvUserTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="peace, war, sex, drags, rock'n'roll, pockemon, rakamakafon"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <ExpandableListView
            android:id="@+id/elvUserFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indicatorRight="@android:dimen/thumbnail_width"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/activityuser_favoritfruit"
            android:textStyle="bold|italic"
            android:paddingRight="16dp"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            />
        <ImageView
            android:id="@+id/ivUserFruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@android:drawable/btn_star"
            android:contentDescription="TODO"
            />
    </LinearLayout>

</LinearLayout>
</ScrollView>